--- a/app/globals.css
+++ b/app/globals.css
@@ -351,4 +351,10 @@
   .fav-recipe-card-thumb:hover img {
     transform: scale(1.05);
   }
+
+  .flamkuchen-font {
+    font-family: 'YourDesiredFont', sans-serif;
+    font-size: 18px; /* Adjust the size as needed */
+    color: #0b3558; /* Adjust the color as needed */
+  }
 }
